# wikiwho_rs

./: .gitignore  .ignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  dewiktionary-20240901-pages-meta-history.xml.zst  requirements.txt
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  fuzz.yml  heavy.yml  release.yml  verify-release.yml
benches/: bench_utils.rs  utils_impls.rs
dev-data/: .gitignore  README.md
dev-data/article-cache/: ATTRIBUTION.md  Antarctica.json.zst  Bioglass_45S5.json.zst  Circumcision.json.zst  Geography_of_El_Salvador.json.zst  README.md
dev-data/extra-dumps/: .gitignore
dev-data/reference-dumps/: ATTRIBUTION.md  README.md  dewiktionary-20240901-ci-subset.xml.zst
docs/: release-ci-plan.md
failing-inputs/: Anontalkpagetext.xml  Anontalkpagetext_shortened.xml  Hallo.xml  Hallo_regurgitated.xml  familia.xml
proptest-regressions/: integration_tests.txt  utils.txt
src/: algorithm.rs  difflib.rs  difflib_find_longest_match.md  dump_parser.rs  integration_tests.rs  lib.rs  main.rs  optimized_str.rs  test_support.rs  utils.rs
src/algorithm/: mod.rs  serde_impl.rs  types.rs
src/dump_parser/: mod.rs  types.rs
tests/: algorithm_exact_tests.proptest-regressions  algorithm_exact_tests.rs  algorithm_statistic_tests.rs  fetch_stat_test_data.py  parser_tests.rs  skipped_suites.rs  support.py  utils_comparisons.proptest-regressions  utils_comparisons.rs
tests/common/: mod.rs
tests/fixtures/exact-regressions/: Anontalkpagetext_shortened-manually.xml  Anontalkpagetext_shortened.json  README.md
tests/statistics-data/: .gitignore  README.md
tests/statistics-data/article-cache/: Amstrad_CPC.json.zst  Apollo_11.json.zst  Armenian_genocide.json.zst  Barack_Obama.json.zst  Bothrops_jararaca.json.zst  Chinese_Communist_Party.json.zst  Chlorine.json.zst  Democritus.json.zst  Diana,_Princess_of_Wales.json.zst  Encryption.json.zst  Eritrean_Defence_Forces.json.zst  European_Free_Trade_Association.json.zst  Evolution.json.zst  README.md
tests/statistics-data/extra-dumps/: .gitignore
tools/: fetch_gold_standard.py  fetch_test_data.py  make_ci_subset.py  test-data.sha256  wikiwho-viewer.html
