[package]
name = "wikiwho"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0 AND MIT"
repository = "https://github.com/Schuwi/wikiwho_rs"
description = "Fast Rust reimplementation of the WikiWho algorithm for fine-grained authorship attribution on large datasets. Optimized for easy integration in multi-threaded applications."
exclude = [ "*.xml", "*.xml.zst" ]

[[bench]]
name = "bench_utils"
harness = false

[profile.bench]
lto = true
codegen-units = 1

[profile.test]
opt-level = 1

[features]
default = [ ]
strict = []
optimized-str = []
python-diff = [ "dep:pyo3" ]
serde = [ "dep:serde", "chrono/serde", "compact_str/serde" ]

[dependencies]
aho-corasick = "1.1.3"
blake3 = "1.5.4"
chrono = "0.4.38"
compact_str = "0.8.0"
imara-diff = { version = "0.1.7", default-features = false }
memchr = "2.7.4"
pyo3 = { version = "0.22.3", optional = true }
quick-xml = "0.36.2"
rand = "0.8.5"
regex = "1.10.6"
rustc-hash = "2.0.0"
serde = { version = "1.0.213", optional = true, features = ["derive"] }
string-interner = "0.17.0"
thiserror = "1.0.63"
tracing = "0.1.40"
unicode-case-mapping = "1.0.0"

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.5.1"
hex = "0.4.3"
proptest = "1.5.0"
pyo3 = { version = "0.22.3", features = ["auto-initialize"] }
rand_xoshiro = "0.6.0"
# Supports "back-references" in pickles, i.e. modifications of already-memoized values (real reference sharing)
pickled = "2.0.0-alpha3"
serde_json = "1.0.132"
wikiwho = { path = ".", features = ["serde"] }
zstd = "0.13.2"

[profile.test.package.quick-xml]
opt-level = 3

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[profile.test.package.pyo3]
opt-level = 3
