[package]
name = "wikiwho"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0 AND MIT"
repository = "https://github.com/Schuwi/wikiwho_rs"
description = "Fast Rust reimplementation of the WikiWho algorithm for fine-grained authorship attribution on large datasets. Optimized for easy integration in multi-threaded applications."
exclude = [ "*.xml", "*.xml.zst", "*.json.zst", "*.csv" ]

[lib]
bench = false

[[bin]]
name = "wikiwho-cli"
path = "src/bin/wikiwho-cli.rs"
required-features = ["cli"]

[[bench]]
name = "bench_utils"
harness = false
required-features = ["optimized-str", "optimized-lowercase"]

[profile.bench]
lto = true
codegen-units = 1

[profile.test]
opt-level = 1

[features]
default = [ "optimized-str" ]
strict = []
optimized-str = [ "dep:aho-corasick", "dep:memchr" ]
optimized-lowercase = [ "dep:unicode-case-mapping" ]
python-diff = [ "dep:pyo3" ]
serde = [ "dep:serde", "dep:serde_json", "chrono/serde", "compact_str/serde" ]
cli = [ "serde", "dep:getopts", "dep:bzip2", "dep:flate2", "dep:zstd" ]

[dependencies]
aho-corasick = { version = "1.1.3", optional = true }
blake3 = "1.5.4"
chrono = "0.4.38"
compact_str = "0.8.0"
imara-diff = { version = "0.1.7", default-features = false }
memchr = { version = "2.7.4", optional = true }
pyo3 = { version = "0.22.3", optional = true } 
quick-xml = "0.36.2"
rand = "0.8.5"
regex = "1.10.6"
rustc-hash = "2.0.0"
serde = { version = "1.0.213", optional = true, features = ["derive"] }
serde_json = { version = "1.0.132", optional = true }
bzip2 = { version = "0.5", optional = true }
flate2 = { version = "1", optional = true }
getopts = { version = "0.2", optional = true }
zstd = { version = "0.13.2", optional = true }
string-interner = "0.17.0"
thiserror = "1.0.63"
tracing = "0.1.40"
unicode-case-mapping = { version = "1.0.0", optional = true }
yoke = { version = "0.8.1", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
bzip2 = "0.5"
criterion = "0.5.1"
flate2 = "1"
hex = "0.4.3"
memchr = "2.7.4"
proptest = "1.5.0"
pyo3 = { version = "0.22.3", features = ["auto-initialize"] }
rand_xoshiro = "0.6.0"
serde_json = "1.0.132"
zstd = "0.13.2"

[profile.test.package.quick-xml]
opt-level = 3

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_xoshiro]
opt-level = 3

[profile.test.package.pyo3]
opt-level = 3

# pyo3 macros (import_exception! etc.) internally check cfg(feature = "gil-refs"),
# which was removed in pyo3 0.22. Declare it as expected to suppress warnings.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("gil-refs"))'] }
