[package]
name = "wikiwho"
version = "0.3.1"
edition = "2021"
rust-version = "1.94.1"
license = "MPL-2.0 AND MIT"
repository = "https://github.com/Schuwi/wikiwho_rs"
description = "Fast Rust reimplementation of the WikiWho algorithm for fine-grained authorship attribution on large datasets. Optimized for easy integration in multi-threaded applications."
exclude = [ "*.xml", "*.xml.zst", "*.json.zst", "*.csv" ]

[lib]
bench = false

[[bin]]
name = "wikiwho-cli"
path = "src/bin/wikiwho-cli.rs"
required-features = ["cli"]

[[bench]]
name = "bench_utils"
harness = false
required-features = ["optimized-str", "optimized-lowercase"]

[profile.bench]
lto = true
codegen-units = 1

[profile.test]
opt-level = 1

[features]
default = [ "optimized-str" ]
strict = []
optimized-str = [ "dep:aho-corasick", "dep:memchr" ]
optimized-lowercase = [ "dep:unicode-case-mapping" ]
python-diff = [ "dep:pyo3" ]
serde = [ "dep:serde", "dep:serde_json", "chrono/serde", "compact_str/serde" ]
cli = [ "serde", "dep:getopts", "dep:bzip2", "dep:flate2", "dep:zstd" ]

[dependencies]
aho-corasick = { version = "1.1.4", optional = true }
blake3 = "1.8.4"
chrono = "0.4.44"
compact_str = "0.9.0"
imara-diff = { version = "0.2.0", default-features = false }
memchr = { version = "2.8.0", optional = true }
pyo3 = { version = "0.28.3", optional = true } 
quick-xml = "0.40.1"
rand = "0.10.0"
regex = "1.12.3"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
bzip2 = { version = "0.6", optional = true }
flate2 = { version = "1", optional = true }
getopts = { version = "0.2", optional = true }
zstd = { version = "0.13.3", optional = true }
string-interner = "0.19.0"
thiserror = "2.0.18"
tracing = "0.1.44"
unicode-case-mapping = { version = "1.0.0", optional = true }
yoke = { version = "0.8.2", features = ["derive"] }

[dev-dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bzip2 = "0.6"
criterion = "0.8.2"
flate2 = "1"
hex = "0.4.3"
memchr = "2.8.0"
proptest = "1.11.0"
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
rand_xoshiro = "0.8.0"
serde_json = "1.0.149"
zstd = "0.13.3"

[profile.test.package.quick-xml]
opt-level = 3

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_xoshiro]
opt-level = 3

[profile.test.package.pyo3]
opt-level = 3

# pyo3 macros (import_exception! etc.) internally check cfg(feature = "gil-refs"),
# which was removed in pyo3 0.22. Declare it as expected to suppress warnings.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("gil-refs"))'] }
